<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/notification_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/notification_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight=".2">

                <ImageView
                    android:id="@+id/mob_noti_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/mobile_notification" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_notifications_text"
                    android:textSize="20sp"
                    />
            </RelativeLayout>


            <!--<LinearLayout-->
                <!--android:id="@+id/mob_noti_checkbox"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:layout_weight=".5">-->
                <!--<CheckBox-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent" />-->
            <!--</LinearLayout>-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight=".2">

                <ImageView
                    android:id="@+id/email_noti_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/email_notification" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_notifications_text"
                    android:textSize="20sp"
                    />
            </RelativeLayout>


            <!--<LinearLayout-->
            <!--android:id="@+id/mob_noti_checkbox"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:layout_weight=".5">-->
            <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent" />-->
            <!--</LinearLayout>-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight=".2">

                <ImageView
                    android:id="@+id/all_noti_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/disable_notifications" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_notifications_text"
                    android:textSize="20sp"
                    />
            </RelativeLayout>


            <!--<LinearLayout-->
            <!--android:id="@+id/mob_noti_checkbox"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:layout_weight=".5">-->
            <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent" />-->
            <!--</LinearLayout>-->

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/noti_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>
</LinearLayout>